###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "name", version = "0.0")

bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# Configure the LLVM toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "15.0.6",
    cxx_standard = {"": "c++2b"},
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.0",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(
    name = "hedron_compile_commands",
    dev_dependency = True,
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "0d38b05b42b2b1c4b5135376b5d060a94242a17c",
    remote = "https://github.com/crrapi/patched-bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
