"""This is a Bazel module file."""
module(name = "name", version = "0.0")

bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# Configure the LLVM toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.0",
    cxx_standard = {"": "c++2b"},
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.0",
)

bazel_dep(
    name = "hedron_compile_commands",
    dev_dependency = True,
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "0d38b05b42b2b1c4b5135376b5d060a94242a17c",
    remote = "https://github.com/crrapi/patched-bazel-compile-commands-extractor.git",
)
