"""Module for network analysis."""
module(name = "culprit_set", version = "1.0.0")

bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")

bazel_dep(
    name = "hedron_compile_commands",
    dev_dependency = True,
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "0d38b05b42b2b1c4b5135376b5d060a94242a17c",
    remote = "https://github.com/crrapi/patched-bazel-compile-commands-extractor.git",
)
